--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,5 +1,5 @@
 .page-not-found-container {
-  height: 70vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,6 +21,8 @@
   font-family: Roboto;
   font-size: 20px;
   margin-top: -8px;
+  text-align: center;
+  width: 90%;
   color: #989898;
 }
 .page-not-found-button {
@@ -34,25 +36,39 @@
   cursor: pointer;
 }
 
-@media all and (max-width: 768px) {
+@media all and (max-width: 992px) {
   .page-not-found-description {
-    font-size: 16px;
+    font-size: 15px;
   }
-  .search-not-found-heading {
+  .page-not-found-heading {
     font-size: 22px;
+  }
+  .page-not-found-image {
+    max-height: 237px;
+    max-width: 199px;
+  }
+  .page-not-found-button {
+    height: 38px;
+    width: 112px;
+    border-radius: 9px;
+    font-size: 12px;
   }
 }
 @media all and (max-width: 490px) {
   .page-not-found-description {
-    height: 32px;
-    width: 102px;
-    border-radius: 8px;
     font-size: 12px;
   }
   .search-not-found-heading {
     font-size: 16px;
   }
   .page-not-found-button {
+    height: 32px;
+    width: 102px;
+    border-radius: 8px;
     font-size: 12px;
+  }
+  .page-not-found-image {
+    max-height: 173px;
+    max-width: 157px;
   }
 }
