--- a/src/components/MyProfile/index.css
+++ b/src/components/MyProfile/index.css
@@ -86,6 +86,7 @@
   border-radius: 36px;
   padding: 3px;
   background-color: #c6c6c8;
+  cursor: pointer;
 }
 .line {
   border: 0.5px solid #c6c6c8;
