--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,3 +1,42 @@
+.home-route {
+  width: 100vw;
+  height: auto;
+  position: absolute;
+}
+
+.home-body-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.stories-loader-container {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  box-sizing: content-box;
+  height: 194px;
+}
+
+@media all and (max-width: 512px) {
+  .stories-loader-container {
+    padding-top: 64px;
+  }
+}
+
+.home-user-posts-list-el {
+  padding-left: 0px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  box-sizing: content-box;
+  height: auto;
+}
+
 .search-not-found-container {
   height: 70vh;
   display: flex;
